# red

./: .gitignore  README.md  pyproject.toml
docs/: README.md  index.html
src/red/: batch.py  compute.py  constants.py  content.py  docker.py  ecr.py  iam.py  infra.py  logs.py  main.py  schedule.py  utility.py
src/red.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
