[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red"
version = "1.5.0"
description = "Effortless python deployments to AWS"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.16",
    "rich>=13.8.1",
    "typer>=0.12.5",
    "sh>=2.0.7",
]

[project.scripts]
red = "red.main:app"
